<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            style="@style/Widget.BiTGApps.AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.BiTGApps.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    style="@style/TextAppearance.BiTGApps.ToolbarTitle"
                    android:id="@+id/toolbar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:minHeight="?actionBarSize"
                    android:text="@string/app_name"
                    android:textAllCaps="false"
                    android:textStyle="bold" />

        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:focusable="true">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp">

                        <TextView
                                android:id="@+id/gapps_package"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Unknown" />

                        <TextView
                                android:id="@+id/platform"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Unknown" />

                        <TextView
                                android:id="@+id/sdk"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Unknown" />

                        <TextView
                                android:id="@+id/version"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Unknown" />

                        <TextView
                                android:id="@+id/build_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Unknown" />

                        <TextView
                                android:id="@+id/build_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Unknown" />

                        <TextView
                                android:id="@+id/developer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Unknown" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <TextView
                        style="@style/DividerText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Social" />

                <com.google.android.material.card.MaterialCardView
                        android:id="@+id/xda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:focusable="true">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="8dp">

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="12dp"
                                android:src="@drawable/ic_xda" />

                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:orientation="vertical">

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/forum"
                                    android:textStyle="bold" />

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/official_forum_discussion" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                        android:id="@+id/telegram"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:focusable="true">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="8dp">

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="12dp"
                                android:src="@drawable/ic_telegram" />

                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:orientation="vertical">

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/telegram"
                                    android:textStyle="bold" />

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/join_global_discussion_of_lkt" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                        android:id="@+id/github"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:focusable="true">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="8dp">

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:padding="12dp"
                                android:src="@drawable/ic_github" />

                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:orientation="vertical">

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/github"
                                    android:textStyle="bold" />

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/official_github" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>